--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                                         href="#">Contact</a>
                                                 </li>
                                                 <li class="sing-li mb-3  mool-2 "><a
-                                                        class=" sing hover-item-one  text-white fw-bold border border-success rounded px-4 p-2"
+                                                        class=" sing hover-item-one d-block text-center   text-white fw-bold border border-success rounded px-4 p-2"
                                                         href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                                                             height="16" fill="currentColor"
                                                             class="bi bi-person-fill mb-1 mr-1" viewBox="0 0 16 16">
@@ -110,7 +110,7 @@
                                                                 d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
                                                         </svg> Login</a></li>
                                                 <li class="sing-li  mool-2 "><a
-                                                        class="sing hover-item-two text-white fw-bold border border-success rounded  px-4 p-2"
+                                                        class="sing hover-item-two d-block text-center  text-white fw-bold border border-success rounded  px-4 p-2"
                                                         href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                                                             height="16" fill="currentColor"
                                                             class="bi bi-box-arrow-in-right mb-1" viewBox="0 0 16 16">
@@ -140,14 +140,14 @@
                                 <li class="nav-item mool-2"><a class="nav-link text-white fw-bold " href="#">Contact</a>
                                 </li>
                                 <li class="nav-item mool-2"><a
-                                        class="hover-item-one nav-link text-white fw-bold border border-success rounded px-4 p-2"
+                                        class="hover-item-one  nav-link text-white fw-bold border border-success rounded px-4 p-2"
                                         href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                            fill="currentColor" class="bi bi-person-fill mb-1 mr-1" viewBox="0 0 16 16">
+                                            fill="currentColor" class="bi bi-person-fill " viewBox="0 0 16 16">
                                             <path
                                                 d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
                                         </svg> Login</a></li>
-                                <li class="nav-item mool-2 "><a
-                                        class="hover-item-two nav-link text-white fw-bold border border-success rounded  px-4 p-2"
+                                <li class="nav-item mool-2"><a
+                                        class="hover-item-two  nav-link text-white fw-bold border border-success rounded px-4 p-2"
                                         href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                             fill="currentColor" class="bi bi-box-arrow-in-right mb-1"
                                             viewBox="0 0 16 16">
@@ -165,7 +165,7 @@
         </div>
         <!---------------------------------------------- |stiker|--------------------- -->
         <div class="d-wrap">
-            <main>
+            <paddi>
                 <div class="d-i">
                     <div class="d-main-wrap">
                         <aside class="d-playbox">
@@ -195,6 +195,13 @@
                                         <li class="nav-item">
                                             <span class="nav-link">Cras lorem augue facilisis a commodo</span>
                                         </li>
+                                        <li class="nav-item">
+                                            <span class="nav-link">Cras lorem augue facilisis a commodo</span>
+                                        </li>
+                                        <li class="nav-item">
+                                            <span class="nav-link">Cras lorem augue facilisis a commodo</span>
+                                        </li>
+
                                     </ul>
                                 </div>
                                 <!-- Plugin HTML end -->
@@ -205,9 +212,26 @@
                         </aside>
                     </div>
                 </div>
-            </main>
+            </paddi>
         </div>
-
+        <div class="investment-background-image">
+            <div class="investment-background-text ">
+                <h2 class="fs-investment  text-white text-center container-lg container-md">
+                    <span class="fs-span-investment">Secure</span class="fs-span-investment"> Secure and <span
+                        class="fs-span-investment">easy way</span> to trade
+                    <span class="fs-span-investment">forex</span> and other
+                    <span class="fs-span-investment">crypto assets</span>
+                </h2>
+                <div class="d-flex justify-content-center">
+                    <a class="btn btn-success px-4 py-3 fs-5" href="#">Get Started <svg
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-arrow-right text-white" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                        </svg></a>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
 
