--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                         <aside class="d-playbox">
 
                             <!-- DEMO begin -->
-                            <div class="d-demo-wrap">
+                            <div class="d-demo-wrap  input-group ">
 
                                 <!-- Plugin HTML begin -->
-                                <!-- <div class="jctkr-label">
-                                <strong>Newsfeed</strong>
-                            </div> -->
-                                <div class="js-conveyor-3 width-div">
+                                <div class="jctkr-label ">
+                                    <strong class="text-white btn rounded-0 hover-item-two">Newsfeed</strong>
+                                </div>
+                                <div class="js-conveyor-3  form-control bg-dark border-0">
                                     <ul class="nav width-items">
                                         <li class="nav-item">
                                             <a class="nav-link" href="https://web.facebook.com/?_rdc=1&_rdr">he
@@ -269,9 +269,7 @@
 
             $('.js-conveyor-3').jConveyorTicker({
                 anim_duration: 200,
-                reverse_elm: true,
-                force_loop: true,
-                start_paused: true
+
             });
 
 
