--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
             $('.js-conveyor-3').jConveyorTicker({
                 anim_duration: 200,
-
+                reverse_elm: true
             });
 
 
